--- a/frontend/src/layouts/style-auth.css
+++ b/frontend/src/layouts/style-auth.css
@@ -26,3 +26,171 @@
     box-shadow: 0px 4px 10px rgba(243, 232, 232, 0.38);
     border-radius: 20px;
 }
+.text-signin{
+    position: absolute;
+    width: 132px;
+    height: 49px;
+    left: 277px;
+    top: 114px;
+
+    font-family: 'Ruda';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 49px;
+    color: #FFFFFF;
+}
+.text-signin2{
+    position: absolute;
+    width: 300px;
+    height: 19px;
+    left: 193px;
+    top: 185px;
+    
+    font-family: 'Ruda';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    
+    color: #FFFFFF;
+}
+.card-email{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 476px;
+    height: 66px;
+    left: 105px;
+    top: 264px;
+
+    border-radius: 15px;
+}
+.card-password{
+    position: absolute;
+    width: 476px;
+    height: 66px;
+    left: 105px;
+    top: 357px;
+
+    border-radius: 15px;
+}
+.button-signin{
+    position: absolute;
+    width: 106px;
+    height: 40px;
+    left: 288px;
+    top: 443px;
+    
+    background: #B5D2EB;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+.text-insertlogin{
+    position: absolute;
+    width: 300px;
+    height: 19px;
+    left: 193px;
+    top: 185px;
+
+    font-family: 'Ruda';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+
+    color: #FFFFFF;
+}
+.text-or{
+    position: absolute;
+    width: 17px;
+    height: 19px;
+    left: 332px;
+    top: 513px;
+    
+    font-family: 'Ruda';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    
+    color: #FFFFFF;
+}
+.button-facebook {
+    position: absolute;
+    /* width: 40px;
+    height: 39.75px; */
+    /* left: 287px;
+    top: 551px; */
+
+}
+.button-fb-img{
+    position: relative;
+    width: 40px;
+    height: 39.75px;
+    left: 287px;
+    top: 551px;
+    background: #0C0C14;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+.button-fb{
+    position: absolute;
+    width: 40px;
+    height: 39.75px;
+    left: 287px;
+    top: 551px;
+    
+    
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+.button-google{
+    position: absolute;
+    width: 40px;
+    height: 40.81px;
+    left: 354px;
+    top: 551px;
+    
+    
+    
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+.text-dont{
+    position: absolute;
+    width: 164px;
+    height: 17px;
+    left: 213px;
+    top: 622px;
+
+    font-family: 'Ruda';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+
+
+    color: #FFFFFF;
+}
+.text-register{
+    position: absolute;
+    width: 90px;
+    height: 17px;
+    left: 365px;
+    top: 622px;
+
+    font-family: 'Ruda';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+
+
+    color: #012340;
+}
