--- a/frontend/src/layouts/style-auth.css
+++ b/frontend/src/layouts/style-auth.css
@@ -7,10 +7,14 @@
     top: 0px;
 }
 
+.text-input{
+    padding-left: 20px !important;
+}
+
 .background-login{
     position: relative;
-    width: 1440px;
-    height: 1024px;
+    width: 100%;
+    height: 150vh;
 
     background: #0C0C14;
 }
