--- a/frontend/src/layouts/style-regis.css
+++ b/frontend/src/layouts/style-regis.css
@@ -7,7 +7,7 @@
 }
 
 .background-regis{
-    position: relative;
+    position: absolute;
     width: 1440px;
     height: 1024px;
 
@@ -18,10 +18,10 @@
     position: absolute;
     width: 104px;
     height: 24px;
-    left: 270px;
-    top: 164px;
+    left: 230px;
+    top: 169px;
 
-    font-family: 'Ruda';
+    font-family: 'sans serif';
     font-style: normal;
     font-weight: 900;
     font-size: 20px;
@@ -34,8 +34,8 @@
     position: absolute;
     width: 607px;
     height: 575px;
-    left: -400px;
-    top: 200px;
+    left: -430px;
+    top: -740px;
     
     background-color: transparent;
 }
