--- a/frontend/src/layouts/style-auth-verifemail.css
+++ b/frontend/src/layouts/style-auth-verifemail.css
@@ -7,12 +7,11 @@
     background: #0C0C14;
 }
 .button-verifemail{
-    /* Verify Button */
+    position: absolute;
+    width: 200px;
+    height: 58px;
+    left: 428px;
+    top: 532px;
 
-
-position: absolute;
-width: 200px;
-height: 58px;
-left: 428px;
-top: 532px;
+    background: #618FB6;
 }
